deploy: e4b91ed2d2d6c60473d2d590ab6432eadca146f3

--- a/genindex.html
+++ b/genindex.html
@@ -213,7 +213,7 @@
 </li>
       <li><a href="mathematics/complex analysis/Introduction.html#index-0">Complex conjugate</a>
 </li>
-      <li><a href="mathematics/complex analysis/complex_plane.html#index-0">Complex plane</a>, <a href="mathematics/complex analysis/compplane.html#index-0">[1]</a>
+      <li><a href="mathematics/complex analysis/complex_plane.html#index-0">Complex plane</a>
 </li>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-3">Composition (functions)</a>
 </li>
@@ -225,7 +225,7 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/complex analysis/complex_plane.html#index-2">De Moivre&#39;s formula</a>, <a href="mathematics/complex analysis/compplane.html#index-2">[1]</a>
+      <li><a href="mathematics/complex analysis/complex_plane.html#index-2">De Moivre&#39;s formula</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -407,7 +407,7 @@
 </li>
       <li><a href="coding/Intro to Python/Matplotlib.html#index-2">Plots: scatter</a>
 </li>
-      <li><a href="mathematics/complex analysis/complex_plane.html#index-1">Polar form of complex numbers</a>, <a href="mathematics/complex analysis/compplane.html#index-1">[1]</a>
+      <li><a href="mathematics/complex analysis/complex_plane.html#index-1">Polar form of complex numbers</a>
 </li>
       <li><a href="coding/Intro to Python/Printing_and_formatting_statements.html#index-0">Python basics</a>
 </li>
