--- a/mathematics/complex analysis/holomorphic_functions.html
+++ b/mathematics/complex analysis/holomorphic_functions.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Complex plane" href="complex_plane.html" />
-    <link rel="prev" title="Complex plane" href="compplane.html" />
+    <link rel="prev" title="Complex Analysis" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -109,12 +109,6 @@
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
-      <li class="">
-        <a href="compfuncs.html">Compfuncs</a>
-      </li>
-      <li class="">
-        <a href="compplane.html">Complex plane</a>
-      </li>
       <li class="active">
         <a href="">Holomorphic Functions</a>
       </li>
@@ -363,7 +357,7 @@ f'(z_0) &amp; = \partial_x u + i \partial_x v =: \partial_x f(z_0) \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="compplane.html" title="previous page">Complex plane</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Complex Analysis</a>
     <a class='right-next' id="next-link" href="complex_plane.html" title="next page">Complex plane</a>
 
     </div>
