--- a/mathematics/complex analysis/intro.html
+++ b/mathematics/complex analysis/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex functions" href="compfuncs.html" />
+    <link rel="next" title="Holomorphic functions" href="holomorphic_functions.html" />
     <link rel="prev" title="Logic and proof" href="../sets and functions/logic.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -109,12 +109,6 @@
     <li class="active">
       <a href="">Complex Analysis</a>
       <ul class="nav sidenav_l3">
-      <li class="">
-        <a href="compfuncs.html">Compfuncs</a>
-      </li>
-      <li class="">
-        <a href="compplane.html">Complex plane</a>
-      </li>
       <li class="">
         <a href="holomorphic_functions.html">Holomorphic Functions</a>
       </li>
@@ -300,7 +294,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../sets and functions/logic.html" title="previous page">Logic and proof</a>
-    <a class='right-next' id="next-link" href="compfuncs.html" title="next page">Complex functions</a>
+    <a class='right-next' id="next-link" href="holomorphic_functions.html" title="next page">Holomorphic functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
