--- a/geosciences/Google_Earth_Engine_Getting_Started_.html
+++ b/geosciences/Google_Earth_Engine_Getting_Started_.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Google Earth Engine Foundations" href="Google_Earth_Engine_Foundations.html" />
-    <link rel="prev" title="Downloading earthquake data" href="Seismology.html" />
+    <link rel="prev" title="Image Transformations" href="Image_Transformations_and_Orthorectification.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -80,9 +80,6 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Image_Transformations.html">Image Transformations</a>
-    </li>
-    <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
     <li class="">
@@ -108,6 +105,9 @@
     </li>
     <li class="">
       <a href="Seismology.html">Seismology</a>
+    </li>
+    <li class="">
+      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations</a>
     </li>
     <li class="active">
       <a href="">Google Earth Engine Getting Started</a>
@@ -327,7 +327,7 @@ For each dataset there is also a few lines of code provided showing how to best 
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Seismology.html" title="previous page">Downloading earthquake data</a>
+    <a class='left-prev' id="prev-link" href="Image_Transformations_and_Orthorectification.html" title="previous page">Image Transformations</a>
     <a class='right-next' id="next-link" href="Google_Earth_Engine_Foundations.html" title="next page">Google Earth Engine Foundations</a>
 
     </div>
