--- a/geosciences/Seismology.html
+++ b/geosciences/Seismology.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Google Earth Engine Getting Started" href="Google_Earth_Engine_Getting_Started_.html" />
+    <link rel="next" title="Image Transformations" href="Image_Transformations_and_Orthorectification.html" />
     <link rel="prev" title="Waves" href="Wave_dispersion.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,9 +80,6 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Image_Transformations.html">Image Transformations</a>
-    </li>
-    <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
     <li class="">
@@ -108,6 +105,9 @@
     </li>
     <li class="active">
       <a href="">Seismology</a>
+    </li>
+    <li class="">
+      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations</a>
     </li>
     <li class="">
       <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
@@ -605,7 +605,7 @@ To see all events call &#39;print(CatalogObject.__str__(print_all=True))&#39;
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Wave_dispersion.html" title="previous page">Waves</a>
-    <a class='right-next' id="next-link" href="Google_Earth_Engine_Getting_Started_.html" title="next page">Google Earth Engine Getting Started</a>
+    <a class='right-next' id="next-link" href="Image_Transformations_and_Orthorectification.html" title="next page">Image Transformations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
