--- a/geosciences/Wave_dispersion.html
+++ b/geosciences/Wave_dispersion.html
@@ -80,9 +80,6 @@
     <a href="intro.html">Geosciences</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="Image_Transformations.html">Image Transformations</a>
-    </li>
-    <li class="">
       <a href="Image_Filtering.html">Image Filtering</a>
     </li>
     <li class="">
@@ -108,6 +105,9 @@
     </li>
     <li class="">
       <a href="Seismology.html">Seismology</a>
+    </li>
+    <li class="">
+      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations</a>
     </li>
     <li class="">
       <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
