deploy: 69fa67b0907b3b7eeee27e5410bab59c937a90f9

--- a/geosciences/Seismology.html
+++ b/geosciences/Seismology.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Image Transformations" href="Image_Transformations_and_Orthorectification.html" />
+    <link rel="next" title="Image Transformations and orthorectification" href="Image_Transformations_and_Orthorectification.html" />
     <link rel="prev" title="Waves" href="Wave_dispersion.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,7 +107,7 @@
       <a href="">Seismology</a>
     </li>
     <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations</a>
+      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
       <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
@@ -605,7 +605,7 @@ To see all events call &#39;print(CatalogObject.__str__(print_all=True))&#39;
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Wave_dispersion.html" title="previous page">Waves</a>
-    <a class='right-next' id="next-link" href="Image_Transformations_and_Orthorectification.html" title="next page">Image Transformations</a>
+    <a class='right-next' id="next-link" href="Image_Transformations_and_Orthorectification.html" title="next page">Image Transformations and orthorectification</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
