--- a/geosciences/Image_Filtering.html
+++ b/geosciences/Image_Filtering.html
@@ -107,7 +107,7 @@
       <a href="Seismology.html">Seismology</a>
     </li>
     <li class="">
-      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations</a>
+      <a href="Image_Transformations_and_Orthorectification.html">Image Transformations and orthorectification</a>
     </li>
     <li class="">
       <a href="Google_Earth_Engine_Getting_Started_.html">Google Earth Engine Getting Started</a>
