deploy: e87acc869b35fcc97f9ce10c0098bf452b362f36

--- a/geosciences/Dynamic_Earth.html
+++ b/geosciences/Dynamic_Earth.html
@@ -86,6 +86,9 @@
       <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
     </li>
     <li class="">
+      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+    </li>
+    <li class="">
       <a href="Cartography_Cartopy.html">Cartography Cartopy</a>
     </li>
     <li class="active">
