--- a/geosciences/Particle_Image_Velocimetry.html
+++ b/geosciences/Particle_Image_Velocimetry.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
+    <link rel="next" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
     <link rel="prev" title="Image Filtering" href="Image_Filtering.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -84,6 +84,9 @@
     </li>
     <li class="active">
       <a href="">Particle Image Velocimetry (PIV)</a>
+    </li>
+    <li class="">
+      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
     </li>
     <li class="">
       <a href="Cartography_Cartopy.html">Cartography Cartopy</a>
@@ -664,7 +667,7 @@ end of iterative process.. Re-arranging vector fields..
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Image_Filtering.html" title="previous page">Image Filtering</a>
-    <a class='right-next' id="next-link" href="Cartography_Cartopy.html" title="next page">Creating maps in Cartopy</a>
+    <a class='right-next' id="next-link" href="1D_Resistivity_Forward_Modelling.html" title="next page">1D Resistivity Forward Modelling</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
