--- a/geosciences/Cartography_Cartopy.html
+++ b/geosciences/Cartography_Cartopy.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
-    <link rel="prev" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
+    <link rel="prev" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -84,6 +84,9 @@
     </li>
     <li class="">
       <a href="Particle_Image_Velocimetry.html">Particle Image Velocimetry (PIV)</a>
+    </li>
+    <li class="">
+      <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
     </li>
     <li class="active">
       <a href="">Cartography Cartopy</a>
@@ -750,7 +753,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Particle_Image_Velocimetry.html" title="previous page">Particle Image Velocimetry (PIV)</a>
+    <a class='left-prev' id="prev-link" href="1D_Resistivity_Forward_Modelling.html" title="previous page">1D Resistivity Forward Modelling</a>
     <a class='right-next' id="next-link" href="Dynamic_Earth.html" title="next page">Dynamic Earth and Planets</a>
 
     </div>
