deploy: 7e2f86227717efde9886e6b750507bfb2620fd20

--- a/coding/Dakota.html
+++ b/coding/Dakota.html
@@ -413,6 +413,10 @@
 <p style="background:black">
 <code style="background:black;color:white">ccmake ..
 </code>
+</p><p style="background:black">
+<code style="background:black;color:white">mkdir build
+<code style="background:black;color:white">cd build
+<code style="background:black;color:white">ccmake ..</code></code></code>
 </p><p>On the window which appears,press the c key to run configure once. Once configured scroll to CMAKE-INSTALL-PREFIX and edit the variable to something memorable. (e.g /home/name/dakota) Pressthe c key again to configure and then the g key to exit back to the terminal.</p>
 <p>Once back in the terminal type the following to run dakota:</p>
 <p style="background:black">
