--- a/geosciences/intro.html
+++ b/geosciences/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Image Filtering" href="Image_Filtering.html" />
-    <link rel="prev" title="Introduction" href="../mathematics/complex analysis/Introduction.html" />
+    <link rel="prev" title="Lecture 1 (Coordinate Systems)" href="../mathematics/mm1/Lecture_1_Coordinate_Systems.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -299,7 +299,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../mathematics/complex analysis/Introduction.html" title="previous page">Introduction</a>
+    <a class='left-prev' id="prev-link" href="../mathematics/mm1/Lecture_1_Coordinate_Systems.html" title="previous page">Lecture 1 (Coordinate Systems)</a>
     <a class='right-next' id="next-link" href="Image_Filtering.html" title="next page">Image Filtering</a>
 
     </div>
