--- a/geosciences/Camera_Calibration.html
+++ b/geosciences/Camera_Calibration.html
@@ -95,6 +95,9 @@
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
     </li>
     <li class="">
+      <a href="climate-model.html">Climate-Model</a>
+    </li>
+    <li class="">
       <a href="Image_Point_Operations.html">Image Point Operations</a>
     </li>
     <li class="active">
