deploy: 4a8cf5b4e9e889f65a441920a1b1669eb492299e

--- a/geosciences/Cartography_Cartopy.html
+++ b/geosciences/Cartography_Cartopy.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
-    <link rel="prev" title="1D Resistivity Forward Modelling" href="1D_Resistivity_Forward_Modelling.html" />
+    <link rel="prev" title="Constructing a zero-dimensional energy balance model" href="Climate_Model.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -87,6 +87,9 @@
     </li>
     <li class="">
       <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
+    </li>
+    <li class="">
+      <a href="Climate_Model.html">Climate Model</a>
     </li>
     <li class="active">
       <a href="">Cartography Cartopy</a>
@@ -756,7 +759,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="1D_Resistivity_Forward_Modelling.html" title="previous page">1D Resistivity Forward Modelling</a>
+    <a class='left-prev' id="prev-link" href="Climate_Model.html" title="previous page">Constructing a zero-dimensional energy balance model</a>
     <a class='right-next' id="next-link" href="Dynamic_Earth.html" title="next page">Dynamic Earth and Planets</a>
 
     </div>
