--- a/geosciences/1D_Resistivity_Forward_Modelling.html
+++ b/geosciences/1D_Resistivity_Forward_Modelling.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
+    <link rel="next" title="Constructing a zero-dimensional energy balance model" href="Climate_Model.html" />
     <link rel="prev" title="Particle Image Velocimetry (PIV)" href="Particle_Image_Velocimetry.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,6 +87,9 @@
     </li>
     <li class="active">
       <a href="">1D Resistivity Forward Modelling</a>
+    </li>
+    <li class="">
+      <a href="Climate_Model.html">Climate Model</a>
     </li>
     <li class="">
       <a href="Cartography_Cartopy.html">Cartography Cartopy</a>
@@ -442,7 +445,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Particle_Image_Velocimetry.html" title="previous page">Particle Image Velocimetry (PIV)</a>
-    <a class='right-next' id="next-link" href="Cartography_Cartopy.html" title="next page">Creating maps in Cartopy</a>
+    <a class='right-next' id="next-link" href="Climate_Model.html" title="next page">Constructing a zero-dimensional energy balance model</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
