--- a/geosciences/Dynamic_Earth.html
+++ b/geosciences/Dynamic_Earth.html
@@ -89,6 +89,9 @@
       <a href="1D_Resistivity_Forward_Modelling.html">1D Resistivity Forward Modelling</a>
     </li>
     <li class="">
+      <a href="Climate_Model.html">Climate Model</a>
+    </li>
+    <li class="">
       <a href="Cartography_Cartopy.html">Cartography Cartopy</a>
     </li>
     <li class="active">
