deploy: 747530e264d2dfa3bdeccb05a2888f5b6149f380

--- a/geosciences/Dynamic_Earth.html
+++ b/geosciences/Dynamic_Earth.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Constructing a zero-dimensional energy balance model" href="climate-model.html" />
+    <link rel="next" title="Remote Sensing: Image Point Operations" href="Image_Point_Operations.html" />
     <link rel="prev" title="Creating maps in Cartopy" href="Cartography_Cartopy.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,9 +96,6 @@
     </li>
     <li class="active">
       <a href="">Dynamic Earth</a>
-    </li>
-    <li class="">
-      <a href="climate-model.html">Climate-Model</a>
     </li>
     <li class="">
       <a href="Image_Point_Operations.html">Image Point Operations</a>
@@ -852,7 +849,7 @@ Number of points within 2*RMS = 97.10 %.
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Cartography_Cartopy.html" title="previous page">Creating maps in Cartopy</a>
-    <a class='right-next' id="next-link" href="climate-model.html" title="next page">Constructing a zero-dimensional energy balance model</a>
+    <a class='right-next' id="next-link" href="Image_Point_Operations.html" title="next page">Remote Sensing: Image Point Operations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
