--- a/geosciences/Image_Point_Operations.html
+++ b/geosciences/Image_Point_Operations.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Camera Calibration" href="Camera_Calibration.html" />
-    <link rel="prev" title="Constructing a zero-dimensional energy balance model" href="climate-model.html" />
+    <link rel="prev" title="Dynamic Earth and Planets" href="Dynamic_Earth.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -96,9 +96,6 @@
     </li>
     <li class="">
       <a href="Dynamic_Earth.html">Dynamic Earth</a>
-    </li>
-    <li class="">
-      <a href="climate-model.html">Climate-Model</a>
     </li>
     <li class="active">
       <a href="">Image Point Operations</a>
@@ -679,7 +676,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="climate-model.html" title="previous page">Constructing a zero-dimensional energy balance model</a>
+    <a class='left-prev' id="prev-link" href="Dynamic_Earth.html" title="previous page">Dynamic Earth and Planets</a>
     <a class='right-next' id="next-link" href="Camera_Calibration.html" title="next page">Camera Calibration</a>
 
     </div>
